RESOLVED FIXED28343
Setting attribute event listeners to the body does not set them on the window
https://bugs.webkit.org/show_bug.cgi?id=28343
Summary Setting attribute event listeners to the body does not set them on the window
Sam Weinig
Reported 2009-08-15 15:07:12 PDT
Setting an attrbute event listener to the body, eg. document.body.onload = function() {}, does not set window.onload as it should.
Attachments
Patch (20.40 KB, patch)
2009-08-15 15:09 PDT, Sam Weinig
mitz: review+
Sam Weinig
Comment 1 2009-08-15 15:09:33 PDT
Sam Weinig
Comment 2 2009-08-15 15:15:00 PDT
Fixed in r47326.
Note You need to log in before you can comment on or make changes to this bug.