WebCore: Setting attribute event listeners to the body does not set them on the window https://bugs.webkit.org/show_bug.cgi?id=28343

Reviewed by Dan Bernstein.

Tests: fast/dom/Window/HTMLBodyElement-window-eventListener-attributes.html
       fast/dom/Window/HTMLFrameSetElement-window-eventListener-attributes.html

* html/HTMLBodyElement.cpp:
(WebCore::HTMLBodyElement::setOnblur): Use setWindowAttributeEventListener instead of setAttributeEventListener.
(WebCore::HTMLBodyElement::setOnerror): Ditto.
(WebCore::HTMLBodyElement::setOnfocus): Ditto.
(WebCore::HTMLBodyElement::setOnload): Ditto.
(WebCore::HTMLBodyElement::setOnbeforeunload): Ditto.
(WebCore::HTMLBodyElement::setOnmessage): Ditto.
(WebCore::HTMLBodyElement::setOnoffline): Ditto.
(WebCore::HTMLBodyElement::setOnonline): Ditto.
(WebCore::HTMLBodyElement::setOnresize): Ditto.
(WebCore::HTMLBodyElement::setOnstorage): Ditto.
(WebCore::HTMLBodyElement::setOnunload): Ditto.
* html/HTMLFrameSetElement.cpp:
(WebCore::HTMLFrameSetElement::setOnblur): Ditto.
(WebCore::HTMLFrameSetElement::setOnerror): Ditto.
(WebCore::HTMLFrameSetElement::setOnfocus): Ditto.
(WebCore::HTMLFrameSetElement::setOnload): Ditto.
(WebCore::HTMLFrameSetElement::setOnbeforeunload): Ditto.
(WebCore::HTMLFrameSetElement::setOnmessage): Ditto.
(WebCore::HTMLFrameSetElement::setOnoffline): Ditto.
(WebCore::HTMLFrameSetElement::setOnonline): Ditto.
(WebCore::HTMLFrameSetElement::setOnresize): Ditto.
(WebCore::HTMLFrameSetElement::setOnstorage): Ditto.
(WebCore::HTMLFrameSetElement::setOnunload): Ditto.

LayoutTests: Setting attribute event listeners to the body does not set them on the window
https://bugs.webkit.org/show_bug.cgi?id=28343

Reviewed by Dan Bernstein.

* fast/dom/Window/HTMLBodyElement-window-eventListener-attributes-expected.txt: Added.
* fast/dom/Window/HTMLBodyElement-window-eventListener-attributes.html: Added.
* fast/dom/Window/HTMLFrameSetElement-window-eventListener-attributes-expected.txt: Added.
* fast/dom/Window/HTMLFrameSetElement-window-eventListener-attributes.html: Added.
* fast/dom/Window/resources/HTMLBodyElement-window-eventListener-attributes.js: Added.
* fast/dom/Window/resources/HTMLFrameSetElement-window-eventListener-attributes.js: Added.



Canonical link: https://commits.webkit.org/38927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47326 268f45cc-cd09-0410-ab3c-d52691b4dbfc